fix overflow of form on mobile

--- a/components/Login/login.module.scss
+++ b/components/Login/login.module.scss
@@ -2,6 +2,7 @@
   background-color: #034a38;
   min-height: 100vh;
   height: fit-content;
+  padding-bottom: 3rem;
 
   .formContainer {
     width: 90%;
@@ -9,7 +10,7 @@
     border-top-right-radius: 10rem;
     margin: 3rem 5%;
     background-color: #f7faee;
-    min-height: fit-content;
+    min-height: 32rem;
     max-height: 32rem;
     height: calc(100vh - 10rem);
     padding: 4rem 3rem 2rem 2rem;
@@ -29,7 +30,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        min-height: fit-content;
+        min-height: 22rem;
         max-height: 22rem;
         height: calc(100vh - 20rem);
 
